[package]
name = "rusty-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", default-features = false, features = ["webgpu"] }
legion = "=0.3.1"
serde = "=1.0.115"
ron = "=0.6.1"

